[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/ui/fonts/montserrat_eb_48.tres" type="DynamicFont" id=1]
[ext_resource path="res://map/multi-player/ui/ui.gd" type="Script" id=2]
[ext_resource path="res://assets/ui/icon/menu.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/icon/menu_press.png" type="Texture" id=4]
[ext_resource path="res://assets/ui/fonts/montserrat_eb_32.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/ui/icon/close.png" type="Texture" id=6]
[ext_resource path="res://assets/ui/icon/gold.png" type="Texture" id=7]
[ext_resource path="res://assets/ui/img/border_no_transparent.png" type="Texture" id=8]
[ext_resource path="res://assets/ui/list-deck/list_deck.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/ui/icon/recruit.png" type="Texture" id=10]
[ext_resource path="res://assets/ui/bar/bar_over.png" type="Texture" id=11]
[ext_resource path="res://assets/ui/fonts/montserrat_eb_16.tres" type="DynamicFont" id=12]
[ext_resource path="res://assets/ui/bar/bar.png" type="Texture" id=13]
[ext_resource path="res://assets/ui/scoreboard/scoreboard.tscn" type="PackedScene" id=14]

[node name="ui" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control"]
anchor_right = 1.0
margin_bottom = 173.0
size_flags_horizontal = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer3" type="VBoxContainer" parent="CanvasLayer/Control/HBoxContainer"]
margin_right = 154.0
margin_bottom = 173.0
rect_min_size = Vector2( 154, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/Control/HBoxContainer/HBoxContainer3"]
margin_right = 154.0
margin_bottom = 5.0
rect_min_size = Vector2( 0, 5 )

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/HBoxContainer/HBoxContainer3"]
margin_top = 9.0
margin_right = 154.0
margin_bottom = 89.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="TextureRect" parent="CanvasLayer/Control/HBoxContainer/HBoxContainer3/HBoxContainer"]
margin_right = 80.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
texture = ExtResource( 7 )
expand = true

[node name="label" type="Label" parent="CanvasLayer/Control/HBoxContainer/HBoxContainer3/HBoxContainer"]
margin_left = 84.0
margin_top = 20.0
margin_right = 150.0
margin_bottom = 60.0
custom_colors/font_color = Color( 1, 0.776471, 0.364706, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/line_spacing = 2
custom_constants/shadow_as_outline = 2
custom_fonts/font = ExtResource( 5 )
text = "100 "
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/Control/HBoxContainer/HBoxContainer3"]
margin_top = 93.0
margin_right = 154.0
margin_bottom = 173.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="TextureRect" parent="CanvasLayer/Control/HBoxContainer/HBoxContainer3/HBoxContainer2"]
margin_right = 80.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
texture = ExtResource( 10 )
expand = true

[node name="label" type="Label" parent="CanvasLayer/Control/HBoxContainer/HBoxContainer3/HBoxContainer2"]
margin_left = 84.0
margin_top = 20.0
margin_right = 154.0
margin_bottom = 60.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/line_spacing = 2
custom_constants/shadow_as_outline = 2
custom_fonts/font = ExtResource( 5 )
text = "0/10"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/HBoxContainer"]
margin_left = 158.0
margin_right = 171.0
margin_bottom = 173.0
rect_min_size = Vector2( 10, 0 )
size_flags_horizontal = 3

[node name="CenterContainer2" type="VBoxContainer" parent="CanvasLayer/Control/HBoxContainer"]
margin_left = 175.0
margin_right = 425.0
margin_bottom = 173.0
rect_min_size = Vector2( 250, 0 )

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/HBoxContainer/CenterContainer2"]
margin_right = 250.0
margin_bottom = 15.0
rect_min_size = Vector2( 0, 15 )

[node name="vic_bar" type="TextureProgress" parent="CanvasLayer/Control/HBoxContainer/CenterContainer2"]
margin_top = 19.0
margin_right = 250.0
margin_bottom = 44.0
rect_min_size = Vector2( 0, 25 )
size_flags_horizontal = 3
value = 50.0
texture_under = ExtResource( 13 )
texture_over = ExtResource( 11 )
texture_progress = ExtResource( 13 )
tint_under = Color( 1, 0, 0, 1 )
tint_progress = Color( 0, 0.180392, 1, 1 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/Control/HBoxContainer"]
margin_left = 429.0
margin_right = 442.0
margin_bottom = 173.0
rect_min_size = Vector2( 10, 0 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="VBoxContainer" parent="CanvasLayer/Control/HBoxContainer"]
margin_left = 446.0
margin_right = 600.0
margin_bottom = 173.0
rect_min_size = Vector2( 154, 0 )

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/HBoxContainer/CenterContainer"]
margin_right = 154.0
margin_bottom = 5.0
rect_min_size = Vector2( 0, 5 )

[node name="menu_btn" type="TextureButton" parent="CanvasLayer/Control/HBoxContainer/CenterContainer"]
margin_left = 32.0
margin_top = 9.0
margin_right = 122.0
margin_bottom = 89.0
rect_min_size = Vector2( 90, 80 )
size_flags_horizontal = 4
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
expand = true

[node name="info" type="HBoxContainer" parent="CanvasLayer/Control"]
anchor_right = 1.0
margin_bottom = 470.0
rect_min_size = Vector2( 0, 470 )
mouse_filter = 2
size_flags_horizontal = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/Control/info"]
margin_right = 25.0
margin_bottom = 470.0
rect_min_size = Vector2( 25, 0 )
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/info"]
margin_left = 29.0
margin_right = 571.0
margin_bottom = 470.0
mouse_filter = 2
size_flags_horizontal = 3
alignment = 1

[node name="info_title" type="Label" parent="CanvasLayer/Control/info/VBoxContainer"]
margin_top = 199.0
margin_right = 542.0
margin_bottom = 239.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/line_spacing = 2
custom_constants/shadow_as_outline = 2
custom_fonts/font = ExtResource( 5 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="info_message" type="Label" parent="CanvasLayer/Control/info/VBoxContainer"]
margin_top = 243.0
margin_right = 542.0
margin_bottom = 271.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/line_spacing = 2
custom_constants/shadow_as_outline = 2
custom_fonts/font = ExtResource( 12 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/info"]
margin_left = 575.0
margin_right = 600.0
margin_bottom = 470.0
rect_min_size = Vector2( 25, 0 )
mouse_filter = 2

[node name="hurt_effect" type="NinePatchRect" parent="CanvasLayer/Control"]
modulate = Color( 0.827451, 0.0980392, 0.0980392, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 8 )
region_rect = Rect2( -14.1632, -10.0305, 510.48, 356.69 )
patch_margin_left = 34
patch_margin_top = 28
patch_margin_right = 31
patch_margin_bottom = 28
__meta__ = {
"_edit_use_anchors_": false
}

[node name="deck_list" parent="CanvasLayer/Control" instance=ExtResource( 9 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -300.0
margin_top = -381.0
margin_right = 300.0
margin_bottom = 0.0
rect_min_size = Vector2( 600, 325 )
size_flags_horizontal = 1
alignment = 1

[node name="loading" type="VBoxContainer" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer/loading"]
margin_right = 600.0
margin_bottom = 120.0
rect_min_size = Vector2( 0, 120 )
color = Color( 0, 0, 0, 1 )

[node name="label2" type="Label" parent="CanvasLayer/loading"]
margin_top = 124.0
margin_right = 600.0
margin_bottom = 900.0
size_flags_vertical = 7
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/line_spacing = 2
custom_constants/shadow_as_outline = 2
custom_fonts/font = ExtResource( 1 )
text = "Ready in 5..."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/loading"]
margin_top = 904.0
margin_right = 600.0
margin_bottom = 1024.0
rect_min_size = Vector2( 0, 120 )
color = Color( 0, 0, 0, 1 )

[node name="game_over" type="ColorRect" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.196078 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/game_over"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/game_over/VBoxContainer"]
margin_right = 600.0
margin_bottom = 120.0
rect_min_size = Vector2( 0, 120 )
color = Color( 0, 0, 0, 1 )

[node name="MarginContainer5" type="MarginContainer" parent="CanvasLayer/game_over/VBoxContainer"]
margin_top = 124.0
margin_right = 600.0
margin_bottom = 213.0
rect_min_size = Vector2( 0, 50 )
size_flags_vertical = 3

[node name="label2" type="Label" parent="CanvasLayer/game_over/VBoxContainer"]
margin_top = 217.0
margin_right = 600.0
margin_bottom = 277.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/line_spacing = 2
custom_constants/shadow_as_outline = 2
custom_fonts/font = ExtResource( 1 )
text = "Game Over"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label3" type="Label" parent="CanvasLayer/game_over/VBoxContainer"]
margin_top = 281.0
margin_right = 600.0
margin_bottom = 321.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/line_spacing = 2
custom_constants/shadow_as_outline = 2
custom_fonts/font = ExtResource( 5 )
text = "Team ... win"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/game_over/VBoxContainer"]
margin_top = 325.0
margin_right = 600.0
margin_bottom = 350.0
rect_min_size = Vector2( 0, 25 )

[node name="scoreboard" parent="CanvasLayer/game_over/VBoxContainer" instance=ExtResource( 14 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 354.0
margin_right = 600.0
margin_bottom = 654.0
rect_min_size = Vector2( 0, 300 )
size_flags_horizontal = 3

[node name="MarginContainer3" type="MarginContainer" parent="CanvasLayer/game_over/VBoxContainer"]
margin_top = 658.0
margin_right = 600.0
margin_bottom = 658.0
rect_min_size = Vector2( 50, 0 )

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/game_over/VBoxContainer"]
margin_top = 662.0
margin_right = 600.0
margin_bottom = 712.0
rect_min_size = Vector2( 0, 50 )

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/game_over/VBoxContainer"]
margin_top = 716.0
margin_right = 600.0
margin_bottom = 806.0
alignment = 1

[node name="re_match" type="Button" parent="CanvasLayer/game_over/VBoxContainer/HBoxContainer"]
margin_left = 68.0
margin_right = 281.0
margin_bottom = 90.0
rect_min_size = Vector2( 150, 90 )
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 5 )
text = " Play Again "

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/game_over/VBoxContainer/HBoxContainer"]
margin_left = 285.0
margin_right = 310.0
margin_bottom = 90.0
rect_min_size = Vector2( 25, 0 )

[node name="exit_game" type="Button" parent="CanvasLayer/game_over/VBoxContainer/HBoxContainer"]
margin_left = 314.0
margin_right = 532.0
margin_bottom = 90.0
rect_min_size = Vector2( 150, 90 )
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 5 )
text = " Main Menu "

[node name="MarginContainer4" type="MarginContainer" parent="CanvasLayer/game_over/VBoxContainer"]
margin_top = 810.0
margin_right = 600.0
margin_bottom = 900.0
rect_min_size = Vector2( 0, 50 )
size_flags_vertical = 3

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer/game_over/VBoxContainer"]
margin_top = 904.0
margin_right = 600.0
margin_bottom = 1024.0
rect_min_size = Vector2( 0, 120 )
color = Color( 0, 0, 0, 1 )

[node name="reward_dialog" type="Control" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/reward_dialog"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.603922 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/reward_dialog"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/reward_dialog/VBoxContainer"]
margin_right = 600.0
margin_bottom = 150.0
rect_min_size = Vector2( 0, 150 )

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/reward_dialog/VBoxContainer"]
margin_top = 154.0
margin_right = 600.0
margin_bottom = 870.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/reward_dialog/VBoxContainer/HBoxContainer"]
margin_left = 21.0
margin_right = 46.0
margin_bottom = 716.0
rect_min_size = Vector2( 25, 0 )

[node name="Panel" type="PanelContainer" parent="CanvasLayer/reward_dialog/VBoxContainer/HBoxContainer"]
margin_left = 50.0
margin_top = 68.0
margin_right = 550.0
margin_bottom = 648.0
rect_min_size = Vector2( 500, 200 )
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/reward_dialog/VBoxContainer/HBoxContainer/Panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 493.0
margin_bottom = 573.0
size_flags_vertical = 0

[node name="HBoxContainer3" type="HBoxContainer" parent="CanvasLayer/reward_dialog/VBoxContainer/HBoxContainer/Panel/VBoxContainer"]
margin_right = 486.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/reward_dialog/VBoxContainer/HBoxContainer/Panel/VBoxContainer/HBoxContainer3"]
margin_right = 10.0
margin_bottom = 100.0
rect_min_size = Vector2( 10, 0 )

[node name="Label" type="Label" parent="CanvasLayer/reward_dialog/VBoxContainer/HBoxContainer/Panel/VBoxContainer/HBoxContainer3"]
margin_left = 14.0
margin_top = 20.0
margin_right = 472.0
margin_bottom = 80.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0.745098, 0.0470588, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Unit Unlock!"
align = 1
valign = 1

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/reward_dialog/VBoxContainer/HBoxContainer/Panel/VBoxContainer/HBoxContainer3"]
margin_left = 476.0
margin_right = 486.0
margin_bottom = 100.0
rect_min_size = Vector2( 10, 0 )

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/reward_dialog/VBoxContainer/HBoxContainer/Panel/VBoxContainer"]
margin_top = 104.0
margin_right = 486.0
margin_bottom = 404.0

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/reward_dialog/VBoxContainer/HBoxContainer/Panel/VBoxContainer/HBoxContainer2"]
margin_right = 25.0
margin_bottom = 300.0
rect_min_size = Vector2( 25, 0 )

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/reward_dialog/VBoxContainer/HBoxContainer/Panel/VBoxContainer/HBoxContainer2"]
margin_left = 29.0
margin_right = 486.0
margin_bottom = 300.0
size_flags_horizontal = 3
scroll_vertical_enabled = false

[node name="holder" type="HBoxContainer" parent="CanvasLayer/reward_dialog/VBoxContainer/HBoxContainer/Panel/VBoxContainer/HBoxContainer2/ScrollContainer"]
margin_right = 457.0
margin_bottom = 300.0
rect_min_size = Vector2( 0, 300 )
mouse_filter = 2
size_flags_horizontal = 3

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/reward_dialog/VBoxContainer/HBoxContainer/Panel/VBoxContainer/HBoxContainer2/ScrollContainer/holder"]
margin_right = 224.0
margin_bottom = 300.0
rect_min_size = Vector2( 25, 0 )
mouse_filter = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/reward_dialog/VBoxContainer/HBoxContainer/Panel/VBoxContainer/HBoxContainer2/ScrollContainer/holder"]
margin_left = 228.0
margin_right = 228.0
margin_bottom = 300.0
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/reward_dialog/VBoxContainer/HBoxContainer/Panel/VBoxContainer/HBoxContainer2/ScrollContainer/holder"]
margin_left = 232.0
margin_right = 457.0
margin_bottom = 300.0
rect_min_size = Vector2( 25, 0 )
mouse_filter = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/reward_dialog/VBoxContainer/HBoxContainer/Panel/VBoxContainer/HBoxContainer2"]
visible = false
margin_left = 461.0
margin_right = 486.0
margin_bottom = 312.0
rect_min_size = Vector2( 25, 0 )

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/reward_dialog/VBoxContainer/HBoxContainer/Panel/VBoxContainer"]
margin_top = 408.0
margin_right = 486.0
margin_bottom = 448.0
rect_min_size = Vector2( 0, 40 )

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/reward_dialog/VBoxContainer/HBoxContainer/Panel/VBoxContainer"]
margin_top = 452.0
margin_right = 486.0
margin_bottom = 552.0
rect_min_size = Vector2( 0, 100 )

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/reward_dialog/VBoxContainer/HBoxContainer/Panel/VBoxContainer/HBoxContainer"]
margin_right = 10.0
margin_bottom = 100.0
rect_min_size = Vector2( 10, 0 )

[node name="close_exeption_message" type="Button" parent="CanvasLayer/reward_dialog/VBoxContainer/HBoxContainer/Panel/VBoxContainer/HBoxContainer"]
margin_left = 14.0
margin_right = 472.0
margin_bottom = 100.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "Receive"

[node name="MarginContainer3" type="MarginContainer" parent="CanvasLayer/reward_dialog/VBoxContainer/HBoxContainer/Panel/VBoxContainer/HBoxContainer"]
margin_left = 476.0
margin_right = 486.0
margin_bottom = 100.0
rect_min_size = Vector2( 10, 0 )

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/reward_dialog/VBoxContainer/HBoxContainer/Panel/VBoxContainer"]
margin_top = 556.0
margin_right = 486.0
margin_bottom = 566.0
rect_min_size = Vector2( 0, 10 )

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/reward_dialog/VBoxContainer/HBoxContainer"]
margin_left = 554.0
margin_right = 579.0
margin_bottom = 716.0
rect_min_size = Vector2( 25, 0 )

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/reward_dialog/VBoxContainer"]
margin_top = 874.0
margin_right = 600.0
margin_bottom = 1024.0
rect_min_size = Vector2( 0, 150 )

[node name="menu" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="HBoxContainer" parent="CanvasLayer/menu"]
margin_left = 14.0
margin_right = 314.0
margin_bottom = 80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fps_counter" type="Label" parent="CanvasLayer/menu/VBoxContainer2"]
margin_right = 91.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
custom_fonts/font = ExtResource( 12 )
text = "fps : 28"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/menu/VBoxContainer2"]
margin_left = 95.0
margin_right = 110.0
margin_bottom = 80.0
rect_min_size = Vector2( 15, 0 )

[node name="ping_counter" type="Label" parent="CanvasLayer/menu/VBoxContainer2"]
visible = false
margin_left = 114.0
margin_right = 270.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
custom_fonts/font = ExtResource( 12 )
text = "ping : 28/ms"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fps_timer" type="Timer" parent="CanvasLayer/menu/VBoxContainer2"]
autostart = true

[node name="CenterContainer2" type="CenterContainer" parent="CanvasLayer/menu"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -130.0
margin_bottom = 114.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="close_menu" type="TextureButton" parent="CanvasLayer/menu/CenterContainer2"]
margin_left = 25.0
margin_top = 17.0
margin_right = 105.0
margin_bottom = 97.0
rect_min_size = Vector2( 80, 80 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 3 )
expand = true

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/menu"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -199.5
margin_bottom = 199.5
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/menu/HBoxContainer"]
margin_left = 88.0
margin_right = 511.0
margin_bottom = 399.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/menu/HBoxContainer/VBoxContainer"]
margin_right = 423.0
margin_bottom = 123.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 2
custom_fonts/font = ExtResource( 1 )
text = "Menu
"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/menu/HBoxContainer/VBoxContainer"]
margin_top = 127.0
margin_right = 423.0
margin_bottom = 227.0
alignment = 1

[node name="music" type="Button" parent="CanvasLayer/menu/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 200.0
margin_bottom = 100.0
rect_min_size = Vector2( 200, 100 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 12 )
text = "Music On"
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/menu/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 204.0
margin_right = 219.0
margin_bottom = 100.0
rect_min_size = Vector2( 15, 0 )

[node name="sfx" type="Button" parent="CanvasLayer/menu/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 223.0
margin_right = 423.0
margin_bottom = 100.0
rect_min_size = Vector2( 200, 100 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 12 )
text = "Sfx : Enable"
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/menu/HBoxContainer/VBoxContainer"]
margin_top = 231.0
margin_right = 423.0
margin_bottom = 261.0
rect_min_size = Vector2( 0, 30 )

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/menu/HBoxContainer/VBoxContainer"]
margin_top = 265.0
margin_right = 423.0
margin_bottom = 365.0
alignment = 1

[node name="main_menu" type="Button" parent="CanvasLayer/menu/HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_right = 423.0
margin_bottom = 100.0
rect_min_size = Vector2( 415, 100 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 5 )
text = "Main Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/menu/HBoxContainer/VBoxContainer"]
margin_top = 369.0
margin_right = 423.0
margin_bottom = 399.0
rect_min_size = Vector2( 0, 30 )

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="CanvasLayer/Control/HBoxContainer/CenterContainer/menu_btn" to="." method="_on_menu_btn_pressed"]
[connection signal="on_item_press" from="CanvasLayer/Control/deck_list" to="." method="_on_deck_list_on_item_press"]
[connection signal="pressed" from="CanvasLayer/game_over/VBoxContainer/HBoxContainer/re_match" to="." method="_on_re_match_pressed"]
[connection signal="pressed" from="CanvasLayer/game_over/VBoxContainer/HBoxContainer/exit_game" to="." method="_on_exit_game_pressed"]
[connection signal="pressed" from="CanvasLayer/reward_dialog/VBoxContainer/HBoxContainer/Panel/VBoxContainer/HBoxContainer/close_exeption_message" to="." method="_on_close_exeption_message_pressed"]
[connection signal="timeout" from="CanvasLayer/menu/VBoxContainer2/fps_timer" to="." method="_on_fps_timer_timeout"]
[connection signal="pressed" from="CanvasLayer/menu/CenterContainer2/close_menu" to="." method="_on_close_menu_pressed"]
[connection signal="pressed" from="CanvasLayer/menu/HBoxContainer/VBoxContainer/HBoxContainer/music" to="." method="_on_music_pressed"]
[connection signal="pressed" from="CanvasLayer/menu/HBoxContainer/VBoxContainer/HBoxContainer/sfx" to="." method="_on_sfx_pressed"]
[connection signal="pressed" from="CanvasLayer/menu/HBoxContainer/VBoxContainer/HBoxContainer2/main_menu" to="." method="_on_main_menu_pressed"]
